--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -10,10 +10,12 @@
 }
 
 .dropdown_menu_option_1 {
+  font-size: 24px;
   background-color: #d1d1d1; 
 }
 
 .dropdown_menu_option_2 {
+  font-size: 24px;
   background-color: #a1a1a1; 
 }
 
