--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -133,21 +133,35 @@
 
 
 .requirement_row_complete {
-  background-color: #008fba;
+  background-color: #00ff08;
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 
 .requirement_row_incomplete {
   background-color: #363636;
   display: flex;
   flex-direction: row;
+  margin: 10px;
+}
+
+
+.row_group_complete {
+  background-color: #008fba;
+  display: flex;
+  flex-direction: column;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
+.row_group_incomplete {
+  background-color: #363636;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 .relation_group {
   width: 300px;
