--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -136,14 +136,14 @@
   background-color: #00ff08;
   display: flex;
   flex-direction: row;
-  margin: 10px;
+  margin: 25px;
 }
 
 .requirement_row_incomplete {
   background-color: #363636;
   display: flex;
   flex-direction: row;
-  margin: 10px;
+  margin: 25px;
 }
 
 
@@ -161,6 +161,16 @@
   flex-direction: column;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.relation_group {
+  width: 300px;
+  height: 100px;
+  
+  display: flex;
+  flex-direction: row;
+  margin: 25px;
+  text-align: center;
 }
 
 .relation_group {
@@ -193,4 +203,10 @@
 .relation_label {
   font-weight: bold;
   text-decoration: underline;
+}
+
+.operator_box {
+  font-weight: bold;
+  text-decoration: underline;
+  font-size: 24px; 
 }
