--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -114,16 +114,16 @@
 
 
 .report_toggle_selected {
-  font-size: 18px;
-  margin: 12px; 
-  padding: 12px;
+  font-size: 12px;
+  margin: 6px; 
+  padding: 6px;
   background-color: #5a9962
 }
 
 .report_toggle_not_selected {
-  font-size: 18px;
-  margin: 12px; 
-  padding: 12px;
+  font-size: 12px;
+  margin: 6px; 
+  padding: 6px;
   background-color: #a8a8a8
 }
 
@@ -163,7 +163,7 @@
   margin-bottom: 10px;
 }
 
-.relation_group {
+.relation_group_empty {
   width: 300px;
   height: 100px;
   
