--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -107,6 +107,42 @@
 
 
 
+
+
+
+
+
+
+
+.school_labels_row {
+  display: flex;
+  flex-direction: row;
+  margin: 25px;
+
+}
+
+.label_box {
+  width: 300px;
+  height: 100px;
+  background-color: #878787;
+  margin: 25px;
+  display: table;
+  text-align: center;
+}
+
+
+.school_label {
+  display: table-cell;
+  font-size: 36px;
+  font-weight: bold;
+  text-decoration: underline;
+  vertical-align: middle;
+}
+
+
+
+
+
 .source_column_box {
   text-align: center;
   width: 200px;
@@ -208,5 +244,6 @@
 .operator_box {
   font-weight: bold;
   text-decoration: underline;
-  font-size: 24px; 
+  font-size: 24px;
+  text-align: center; 
 }
