--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -1,4 +1,4 @@
-.dropdown_menu_box {
+/* .dropdown_menu_box {
   background-color: #a6c8ff; 
 }
 
@@ -209,4 +209,4 @@
   font-weight: bold;
   text-decoration: underline;
   font-size: 24px; 
-}
+} */
