--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -8,7 +8,7 @@
   flex: 1;
 }
 
-/* .dropdown_menu_box {
+.dropdown_menu_box {
   background-color: #a6c8ff; 
 }
 
@@ -219,4 +219,4 @@
   font-weight: bold;
   text-decoration: underline;
   font-size: 24px; 
-} */
+} 
