--- a/cs160-project/src/App.css
+++ b/cs160-project/src/App.css
@@ -17,7 +17,7 @@
 
 
 .button {
-  line-height: 0.5;
+  line-height: .55;
 }
 
 .relation_label {
@@ -25,7 +25,15 @@
   text-decoration: underline;
 }
 
+.section {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+}
 
+.column.final-report {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
 
 /* END */
 
